<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="iisc.jaideep.sccsapp.MainActivity" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
		android:icon="@drawable/ic_home"        
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_db"
        android:orderInCategory="100"
        android:title="@string/action_delete_db"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_set_event"
        android:orderInCategory="100"
        android:title="@string/action_set_event"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logcat_db"
        android:orderInCategory="100"
        android:title="@string/action_logcat_db"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_counts"
        android:orderInCategory="100"
        android:title="@string/action_show_counts"
        app:showAsAction="never"/>
    
</menu>
